--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -6,5 +6,8 @@
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
             connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString1"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
