+dsn manager. --working but need to start VS as admin now. --need to find out how I can force the one command to run as admin

--- a/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
+++ b/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
@@ -203,6 +203,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>applData.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DSNmngr.cs" />
     <Compile Include="Forms\AssetManager.cs">
       <SubType>Form</SubType>
     </Compile>
