--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -4,10 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
             providerName="System.Data.SqlClient" />
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString1"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
