--- a/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
+++ b/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
@@ -168,6 +168,10 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="Oracle.DataAccess, Version=2.112.3.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=AMD64" />
+    <Reference Include="PdfSharp, Version=1.32.2608.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\PdfSharp.dll</HintPath>
+    </Reference>
     <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -231,6 +235,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesGADATA.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Forms\DocManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DocManager.Designer.cs">
+      <DependentUpon>DocManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\GadataErrorDetails.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -285,6 +295,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="WorksheetFeatures.cs" />
+    <EmbeddedResource Include="Forms\DocManager.resx">
+      <DependentUpon>DocManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\GadataErrorDetails.resx">
       <DependentUpon>GadataErrorDetails.cs</DependentUpon>
     </EmbeddedResource>
@@ -378,6 +391,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="PdfSharp.dll" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
