working on the error manager

--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -9,5 +9,8 @@
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString1"
             connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
             providerName="System.Data.SqlClient" />
+        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString2"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
