--- a/ExcelAddInEquipmentDatabase/Properties/Settings.settings
+++ b/ExcelAddInEquipmentDatabase/Properties/Settings.settings
@@ -10,21 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi</Value>
     </Setting>
-    <Setting Name="GADATAConnectionString1" Type="(Connection string)" Scope="Application">
+    <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=GADATA;Password=GADATA987&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi</Value>
-    </Setting>
-    <Setting Name="GADATAConnectionString2" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987</Value>
+      <Value Profile="(Default)">Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=GADATA;Password=GADATA987</Value>
     </Setting>
   </Settings>
 </SettingsFile>
