--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -6,11 +6,8 @@
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
             connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
             providerName="System.Data.SqlClient" />
-        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString1"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
-            providerName="System.Data.SqlClient" />
-        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString2"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
+        <add name="ExcelAddInEquipmentDatabase.Properties.Settings.ConnectionString"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
