--- a/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
+++ b/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
@@ -185,6 +185,7 @@
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -252,11 +253,23 @@
     <Compile Include="Forms\ErrorManger.Designer.cs">
       <DependentUpon>ErrorManger.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ErrorStats.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ErrorStats.Designer.cs">
+      <DependentUpon>ErrorStats.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\GadataErrorDetails.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\GadataErrorDetails.Designer.cs">
       <DependentUpon>GadataErrorDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\LogDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LogDetails.Designer.cs">
+      <DependentUpon>LogDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\MXxQueryEdit.cs">
       <SubType>Form</SubType>
@@ -312,8 +325,14 @@
     <EmbeddedResource Include="Forms\ErrorManger.resx">
       <DependentUpon>ErrorManger.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ErrorStats.resx">
+      <DependentUpon>ErrorStats.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\GadataErrorDetails.resx">
       <DependentUpon>GadataErrorDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LogDetails.resx">
+      <DependentUpon>LogDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MXxQueryEdit.resx">
       <DependentUpon>MXxQueryEdit.cs</DependentUpon>
