--- a/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
+++ b/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
@@ -40,7 +40,7 @@
     <PublishUrl>\\gnlsnm0101.gen.volvocars.net\proj\6308-Shr-VC024800\OBJECTBEHEER GA\Robots\12. SW + Tools\RobotDatabase\VSTO\DeploymentBase\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>3.0.1.28</ApplicationVersion>
+    <ApplicationVersion>3.0.1.29</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
@@ -159,6 +159,16 @@
     <Reference Include="itextsharp.xtra">
       <HintPath>References\itextsharp.xtra.dll</HintPath>
     </Reference>
+    <Reference Include="MetroFramework">
+      <HintPath>..\packages\MetroFramework.RunTime.1.2.0.3\lib\net40-Client\MetroFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Design">
+      <HintPath>..\packages\MetroFramework.Design.1.2.0.3\lib\net40\MetroFramework.Design.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="MetroFramework.Fonts">
+      <HintPath>..\packages\MetroFramework.Fonts.1.2.0.3\lib\net40\MetroFramework.Fonts.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -259,12 +269,6 @@
     <Compile Include="Forms\ErrorStats.Designer.cs">
       <DependentUpon>ErrorStats.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\GadataErrorDetails.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\GadataErrorDetails.Designer.cs">
-      <DependentUpon>GadataErrorDetails.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\LogDetails.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -334,9 +338,6 @@
     <EmbeddedResource Include="Forms\ErrorStats.resx">
       <DependentUpon>ErrorStats.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\GadataErrorDetails.resx">
-      <DependentUpon>GadataErrorDetails.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\LogDetails.resx">
       <DependentUpon>LogDetails.cs</DependentUpon>
     </EmbeddedResource>
@@ -404,6 +405,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="ExcelAddInEquipmentDatabase_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -433,6 +435,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MetroFramework.txt" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
