--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
@@ -12,4 +15,17 @@
             connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=GADATA;Password=GADATA987"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
+    <userSettings>
+        <ExcelAddInEquipmentDatabase.Properties.Settings>
+            <setting name="activeuser" serializeAs="String">
+                <value>"sdebeul"</value>
+            </setting>
+            <setting name="userlevel" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="usergroup" serializeAs="String">
+                <value>"AAOSR"</value>
+            </setting>
+        </ExcelAddInEquipmentDatabase.Properties.Settings>
+    </userSettings>
 </configuration>
