+added temp stw040 support

--- a/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
+++ b/ExcelAddInEquipmentDatabase/ExcelAddInEquipmentDatabase.csproj
@@ -365,6 +365,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="stw040Sync.cs" />
     <Compile Include="WorksheetFeatures.cs" />
     <EmbeddedResource Include="Forms\AAOSRshiftbook.resx">
       <DependentUpon>AAOSRshiftbook.cs</DependentUpon>
