--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\EqUi_UtilManger\packages.config" />
-  <repository path="..\EQUIToolsLib\packages.config" />
+  <repository path="..\EQUICommunictionLib\packages.config" />
   <repository path="..\ExcelAddInEquipmentDatabase\packages.config" />
-  <repository path="..\MXxWOoverview\packages.config" />
-  <repository path="..\WebApplication1\packages.config" />
 </repositories>
