--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\EqUi_UtilManger\packages.config" />
   <repository path="..\EQUICommunictionLib\packages.config" />
+  <repository path="..\EQUIToolsLib\packages.config" />
   <repository path="..\ExcelAddInEquipmentDatabase\packages.config" />
 </repositories>
